// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/JobHeader default 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <JobHeader
      className=""
      job={
        Object {
          "internalBuildNumber": 1,
          "meta": Object {
            "webpack": Object {
              "builtAt": "2019-01-01T00:00:00.000Z",
              "hash": "abcd1234",
            },
          },
          "summary": Object {
            "webpack": Object {
              "totalSizeByTypeALL": Object {
                "baseline": 900000,
                "current": 1000000,
              },
            },
          },
        }
      }
      tag=""
    />
  </div>
</Router>
`;

exports[`Storyshots Components/JobHeader with custom content 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <JobHeader
      className=""
      job={
        Object {
          "internalBuildNumber": 1,
          "meta": Object {
            "webpack": Object {
              "builtAt": "2019-01-01T00:00:00.000Z",
              "hash": "abcd1234",
            },
          },
          "summary": Object {
            "webpack": Object {
              "totalSizeByTypeALL": Object {
                "baseline": 900000,
                "current": 1000000,
              },
            },
          },
        }
      }
      tag=""
    >
      <p>
        Lorem ipsum dolor sit amed
      </p>
    </JobHeader>
  </div>
</Router>
`;

exports[`Storyshots Components/JobHeader with tag 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "canGo": [Function],
      "createHref": [Function],
      "entries": Array [
        Object {
          "hash": "",
          "key": "home",
          "pathname": "/",
          "search": "",
        },
      ],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "index": 0,
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "key": "home",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "padding": "24px",
        "width": "100%",
      }
    }
  >
    <JobHeader
      className=""
      job={
        Object {
          "internalBuildNumber": 1,
          "meta": Object {
            "webpack": Object {
              "builtAt": "2019-01-01T00:00:00.000Z",
              "hash": "abcd1234",
            },
          },
          "summary": Object {
            "webpack": Object {
              "totalSizeByTypeALL": Object {
                "baseline": 900000,
                "current": 1000000,
              },
            },
          },
        }
      }
      tag="current"
    />
  </div>
</Router>
`;
